k8s/ingress-mfs.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "kspr-dev-mfs"
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
    - host: mfs.kspr.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kspr-dev-mfs
                port:
                  number: 80
      tls:
      - hosts:
        - mfs.kspr.dev
        secretName: kspr-dev-mfs-tls
